# hyperfuel-geofencing-analytics

./: .gitignore  README.md  package-lock.json  package.json
.cursor/rules/: customer-experience-first.mdc  geofencing-analytics-project-context.mdc  karpathy-guidelines.mdc
.cursor/skills/visit-analytics-icons/: SKILL.md
apps/api/: .env.example  pyproject.toml
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/api/v1/routes/: analytics.py  geofence_config.py  health.py  ingest.py
apps/api/app/core/: error_handlers.py  exceptions.py  geo.py  postgrest_errors.py  responses.py  supabase.py  supabase_retry.py
apps/api/app/repositories/: memory_backend.py  supabase_backend.py
apps/api/app/schemas/internal/: models.py
apps/api/app/schemas/requests/: ingest_request.py
apps/api/app/schemas/responses/: analytics_response.py  api_response.py  entity_analytics_response.py  ingest_response.py
apps/api/app/services/: analytics_service.py  entity_analytics_service.py  entity_service.py  geofence_engine.py  ingest_service.py  session_service.py
apps/api/migrations/: 20260624120000_initial_schema.sql  20260625143000_entities_user_id.sql  20260625200000_geo_users.sql
apps/api/tests/: conftest.py  test_analytics_api.py  test_entity_analytics_api.py  test_geo.py  test_geofence_engine.py  test_ingest_api.py  test_supabase_idempotency.py  test_supabase_retry.py
apps/web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
docs/: geofencing-analytics-platform-spec.md
(+193 files in other folders)
